Center elements, change background

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       h1 {
         text-align: center;
         color: rgb(113, 177, 186);
-        width: 1100px;
         display: block;
         margin: 20px auto;
         font-size: 40px;
@@ -109,28 +108,28 @@
         border: 1px solid rgb(113, 177, 186);
         border-radius: 10px;
         padding: 10px;
-        width: 1100px;
+        /* width: 1100px; */
         display: block;
         margin: 0 auto;
         text-align:center;
-        /* background: radial-gradient(993px at 0.5% 98.5%, rgb(0, 239, 247) 0%, rgb(0, 122, 147) 46.7%, rgb(0, 29, 72) 100.2%); */
-        background-image: url("https://images.immediate.co.uk/production/volatile/sites/4/2009/07/GettyImages-991700104-16d04bb.jpg?quality=90&webp=true&resize=940,400");
-        background-size: 1300px 400px;
+        background: linear-gradient(-225deg, #B7F8DB 0%, #50A7C2 100%);
+        /* background-image: url("https://images.immediate.co.uk/production/volatile/sites/4/2009/07/GettyImages-991700104-16d04bb.jpg?quality=90&webp=true&resize=940,400"); */
+        /* background-size: 1300px 400px; */
       }
 
       .adventure {
         font-size: 24px;
         color: rgb(113, 177, 186);
         text-align: center;
-        width: 1100px;
         display: block;
-        margin: 20px auto;
+        margin: 0 auto;
         font-weight: bold;
       }
 
       .yes {
         display: block;
-        margin: 20px auto;
+        margin: 0 auto;
+        text-align: center;
       }
       .extra {
           color: rgb(113, 177, 186);
@@ -176,9 +175,11 @@
       us apprised of new developments all around the world.
     </p>
     <hr />
+    <br />
     <div class="adventure">
         <em> "Are You ready for Adventure?"</em>
-     
+     <br />
+     <br />
     <button class = "yes">Yes, I am!</button>
     </div>
     <img
